Added bootstrap styling

--- a/oidc-okta20/src/app/search/search.component.html
+++ b/oidc-okta20/src/app/search/search.component.html
@@ -1,26 +1,29 @@
+  
+  <h2>Search</h2>
+  <form class="form-inline">
+    <div class="form-group">
+      <input class="form-control" type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()">
+      <button class="btn btn-primary" type="button" (click)="search()">Search</button>
+    </div>
+  </form>
 
-<h2>Search</h2>
-<form>
-  <input type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()">
-  <button type="button" (click)="search()">Search</button>
-</form>
-
-<table *ngIf="searchResults">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Phone</th>
-    <th>Address</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let person of searchResults; let i=index">
-    <td><a [routerLink]="['/edit', person.id]">{{person.name}}</a></td>
-    <td>{{person.phone}}</td>
-    <td>{{person.address.street}}<br/>
-      {{person.address.city}}, {{person.address.state}} {{person.address.zip}}
-    </td>
-  </tr>
-  </tbody>
-</table>
-
+  <table *ngIf="searchResults" class="table">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Address</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let person of searchResults; let i=index">
+        <td scope="col">
+          <a [routerLink]="['/edit', person.id]">{{person.name}}</a>
+        </td>
+        <td scope="col">{{person.phone}}</td>
+        <td scope="col">{{person.address.street}}
+          <br/> {{person.address.city}}, {{person.address.state}} {{person.address.zip}}
+        </td>
+      </tr>
+    </tbody>
+  </table>
