--- a/oidc-okta20/src/app/app.component.html
+++ b/oidc-okta20/src/app/app.component.html
@@ -1,4 +1,8 @@
-
-<h1>Welcome to {{title}}!</h1>
-<!-- Routed views go here -->
-<router-outlet></router-outlet>
+<br>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Welcome {{title}}!</h1>
+  </div>
+  <!-- Routed views go here -->
+  <router-outlet></router-outlet>
+</div>
