--- a/oidc-okta20/src/app/edit/edit.component.html
+++ b/oidc-okta20/src/app/edit/edit.component.html
@@ -2,28 +2,28 @@
 <div *ngIf="person">
   <h3>{{editName}}</h3>
   <form #editForm="ngForm" (ngSubmit)="save()" ngNativeValidate>
-    <div>
+    <div class="form-group">
       <label>Id:</label>
-      {{person.id}}
+      <strong>{{person.id}}</strong> 
     </div>
-    <div>
+    <div class="form-group">
       <label>Name:</label>
-      <input [(ngModel)]="editName" name="name" id="name" placeholder="name" required/>
+      <input class="form-control" [(ngModel)]="editName" name="name" id="name" placeholder="name" required/>
     </div>
-    <div>
+    <div class="form-group">
       <label>Phone:</label>
-      <input [(ngModel)]="editPhone" name="phone" id="phone" placeholder="Phone"/>
+      <input class="form-control" [(ngModel)]="editPhone" name="phone" id="phone" placeholder="Phone"/>
     </div>
     <fieldset>
       <legend>Address:</legend>
       <address>
-        <input [(ngModel)]="editAddress.street" name="street" id="street"><br/>
-        <input [(ngModel)]="editAddress.city" name="city" id="city">,
-        <input [(ngModel)]="editAddress.state" name="state" id="state" size="2">
-        <input [(ngModel)]="editAddress.zip" name="zip" id="zip" size="5">
+        <input class="form-control" [(ngModel)]="editAddress.street" name="street" id="street">
+        <input class="form-control" [(ngModel)]="editAddress.city" name="city" id="city">
+        <input class="form-control" [(ngModel)]="editAddress.state" name="state" id="state" size="2">
+        <input class="form-control" [(ngModel)]="editAddress.zip" name="zip" id="zip" size="5">
       </address>
     </fieldset>
-    <button type="submit" id="save">Save</button>
-    <button (click)="cancel()" id="cancel">Cancel</button>
+    <button class="btn btn-success" type="submit" id="save">Save</button>
+    <button class="btn btn-default" (click)="cancel()" id="cancel">Cancel</button>
   </form>
 </div>
