--- a/oidc-okta20/src/app/search/search.component.css
+++ b/oidc-okta20/src/app/search/search.component.css
@@ -20,4 +20,15 @@
     padding: 8px;
   }
 
+#searchclear {
+    position: absolute;
+    right: 5px;
+    top: 0;
+    bottom: 0;
+    height: 14px;
+    margin: auto;
+    font-size: 14px;
+    cursor: pointer;
+    color: #ccc;
+}
   
