--- a/oidc-okta20/src/app/search/search.component.html
+++ b/oidc-okta20/src/app/search/search.component.html
@@ -1,8 +1,19 @@
   
   <h2>Search</h2>
-  <form class="form-inline">
+  <form class="form-inline" #inputForm="ngForm">
     <div class="form-group">
-      <input class="form-control" type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()">
+      <!-- <input class="form-control" type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()"> -->
+      <div class="btn-group">
+          <input 
+          class="form-control" 
+          type="search" 
+          name="query" 
+          [(ngModel)]="query" 
+          (keyup.enter)="search()"
+          [value]="searchValue"
+          >
+          <span id="searchclear" class="glyphicon glyphicon-remove-circle" (click)="clearInput(inputForm)"></span>
+      </div>
       <button class="btn btn-primary" type="button" (click)="search()">Search</button>
     </div>
   </form>
