--- a/oidc-okta20/src/app/app.component.html
+++ b/oidc-okta20/src/app/app.component.html
@@ -1,8 +1,14 @@
-<br>
+<!-- <br>
 <div class="container">
   <div class="jumbotron">
     <h1>Welcome {{title}}!</h1>
   </div>
-  <!-- Routed views go here -->
+  <router-outlet></router-outlet>
+</div> -->
+ 
+<nav class="navbar navbar-light bg-secondary">
+  <a class="navbar-brand text-light" routerLink="/home">Welcome to {{title}}!</a>
+</nav>
+<div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
